[package]
name = "json_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run_editor"
path = "src/main.rs"

[lib]
name = "json_editor"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.28.1", features = ["persistence"] }
egui = "0.28.1"
egui-modal = "0.4.0"
egui_extras = "0.28.1"
rfd = "0.14.1"
serde = { version = "1.0.204", features = ["derive"] }
